--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
             <artifactId>unirest-java</artifactId>
             <version>3.13.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.pengrad</groupId>
+            <artifactId>java-telegram-bot-api</artifactId>
+            <version>5.6.0</version>
+        </dependency>
     </dependencies>
 
     <build>
